packages/kyvernoPolicies/chart/tests/vpol/require-memory-limit-cel/chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    resources:
      limits:
        memory: "128Mi"
