packages/kyvernoPolicies/chart/tests/vpol/require-memory-limit-cel/chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
        resources:
          limits:
            memory: "128Mi"
